# cx-analytics-platform

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloud/: deployment_notes.md  lambda_handler.py
config/: business.yaml  config.yaml  modeling.yaml
dashboard/: dashboard_specs.md
data/: data_dictionary.md
docs/: architecture_overview.md  business_impact_and_roi.md  business_problem.md  data_sources.md  deployment_plan.md  evaluation_strategy.md  feature_engineering.md  model_card.md  modeling_assumptions.md  statistical_methods.md
notebooks/: 00_EDA.ipynb  01_segmentation.ipynb  02_forecasting.ipynb  03_nlp_pipeline.ipynb  04_ab_testing.ipynb
outputs/: CX_Analytics_Platform_Research_Report.docx
outputs/reports/: campaign_effectiveness_report.md  cx_director_briefing.md  executive_summary.md  segment_marketing_brief.md
src/: forecasting.py  nlp_pipeline.py  preprocessor.py  segmentation.py  viz.py
tests/: conftest.py  test_forecasting.py  test_preprocessor.py  test_segmentation.py
