[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cx-analytics-platform"
version = "1.0.0"
description = "Multi-module customer analytics platform simulating retail property analytics challenges"
authors = [
    { name = "Ramesh Shrestha", email = "ramesh@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "All rights reserved" }
keywords = [
    "customer analytics",
    "machine learning",
    "NLP",
    "time series forecasting",
    "causal inference",
    "A/B testing",
    "retail analytics",
    "shopping centre analytics",
    "property analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"GitHub" = "https://github.com/RameshSTA/cx-analytics-platform"
"LinkedIn" = "https://www.linkedin.com/in/rameshsta/"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = [
    "E501",   # Line too long — handled by formatter
    "B008",   # Function calls in default arguments
    "N803",   # Argument names should be lowercase (sklearn convention uses X)
    "N806",   # Variable in function should be lowercase (X convention)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
